# bd-static-site-generator

./: .gitignore  README.md  pyproject.toml
content/: index.md
src/: block_md.py  htmlnode.py  inline_md.py  main.py  page_generator.py  recur_copy.py  textnode.py
